--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "^4.8.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "react": "19.1.0",
